GCP-5847, GCP-5885 - fixed horizontal scrollbar and used Object for TreeNode.icon

--- a/src/main/webapp/WEB-INF/static/css/fieldbook-tree.css
+++ b/src/main/webapp/WEB-INF/static/css/fieldbook-tree.css
@@ -3,13 +3,29 @@
  */
 ul.fbtree-container
 {
-	font-family: tahoma, arial, helvetica;
+/*	font-family: tahoma, arial, helvetica;
 	font-size: 10pt;
 	white-space: nowrap;
 	padding: 0px;
 	margin: 0; 
 	overflow: hidden;
 	height: 100%;
+	width: 100%;
+*/
+  padding: 0px;
+  margin-bottom: 0px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  overflow: auto;
+  margin: 0px;
+  font-size: 10pt;
+  font-family: tahoma, arial, helvetica;
+  white-space: nowrap;
+  height: 100%;
+  width: 100%;
 }
 
 ul.fbtree-container ul
